--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+GROUP_ID=com.github.starteamx.library
+# ARTIFACT_ID=jitpack # config in your module
+VERSION=1.0.0
