--- a/gson/build.gradle
+++ b/gson/build.gradle
@@ -36,3 +36,5 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.8.9'
 }
+
+apply from: rootProject.file("gradle/maven-publish.gradle")
